ADD :: implement navigation component with responsive styles and mixins

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <nav>
-      <div class="container">
+    <nav class="nav">
+      <div class="container nav__content">
         <div class="nav__bar">
           <a href="#" class="nav__link nav__link--brand">UI Library</a>
 
           <button
             class="nav__toggle"
-            aria-label="Toggle Nav Menu"
+            aria-label="Open Menu"
             aria-expanded="false"
-            aria-controls="nav-menu"
+            aria-controls="mobile-menu"
           >
             BTN
           </button>
         </div>
-        <div class="nav__menu" id="nav-menu">
-          <ul class="nav">
+        <div class="nav__menu" id="mobile-menu">
+          <ul class="nav__list">
             <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
             <li class="nav__item">
               <a href="#" class="nav__link">Components</a>
