--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@
       </div>
     </nav>
     <header>
-      <section class="hero">
-        <h1>UI Library</h1>
-        <p>
-          A collection of reusable UI components for modern web applications.
-        </p>
+      <section class="section hero">
+        <div class="container">
+          <h1>UI Library</h1>
+          <p>
+            A collection of reusable UI components for modern web applications.
+          </p>
+          <!-- Explored - Bubbling + stopPropagation -->
+          <div class="outer">
+            <div class="middle">
+              <button class="inner">Click Me</button>
+            </div>
+          </div>
+        </div>
       </section>
     </header>
     <main>
@@ -74,17 +82,39 @@
       <section class="section" id="components">
         <div class="container">
           <h2>Components</h2>
-          <p>
-            Explore our wide range of components, including buttons, forms,
-            modals, navigation bars, and more. Each component is designed to be
-            flexible and easy to integrate into your projects.
-          </p>
-          <a
-            href="https://ui-library.com/components"
-            target="_blank"
-            rel="noopener noreferrer"
-            >View Components</a
-          >
+          <h3>Modal</h3>
+          <button data-modal="login">Open Modal</button>
+          <div class="modal" data-modal-id="login" hidden>
+            <div class="modal__overlay"></div>
+            <div
+              class="modal__content"
+              role="dialog"
+              aria-modal="true"
+              aria-labelledby="modal-title"
+            >
+              <button class="modal__close">X</button>
+              <h2 id="modal-title">Login</h2>
+              <div class="container">
+                <form class="login__form">
+                  <input
+                    type="email"
+                    placeholder="someone@example.com"
+                    name="email"
+                    id="email"
+                    data-initial-focus
+                  />
+                  <input
+                    type="password"
+                    placeholder="************"
+                    name="password"
+                    id="password"
+                  />
+                  <input type="submit" value="Login" />
+                  <input type="button" value="Cancel" />
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section" id="docs">
