ADD :: implement tab functionality with createTab and setUpTabs

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </div>
             </section>
             <section>
-              <div class="tabs">
+              <div class="tabs" data-tabs>
                 <!-- TAB CONTROLLER -->
                 <div
                   class="tabs__list"
