ADD :: implement accordion component with setup functionality and styles

--- a/index.html
+++ b/index.html
@@ -225,6 +225,129 @@
                 </div>
               </div>
             </section>
+            <section class="accordion" data-accordion>
+              <h2 class="sr-only">FAQs</h2>
+
+              <!-- ITEM 1 -->
+              <div class="accordion__item">
+                <button
+                  class="accordion__trigger"
+                  aria-expanded="false"
+                  aria-controls="acc-panel-1"
+                  id="acc-trigger-1"
+                >
+                  What is your refund policy?
+                </button>
+
+                <div
+                  class="accordion__panel"
+                  id="acc-panel-1"
+                  role="region"
+                  aria-labelledby="acc-trigger-1"
+                  hidden
+                >
+                  <div class="accordion__content">
+                    <p>We provide refunds within 7 days.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM 2 -->
+              <div class="accordion__item">
+                <button
+                  class="accordion__trigger"
+                  aria-expanded="false"
+                  aria-controls="acc-panel-2"
+                  id="acc-trigger-2"
+                >
+                  Do you provide support?
+                </button>
+
+                <div
+                  class="accordion__panel"
+                  id="acc-panel-2"
+                  role="region"
+                  aria-labelledby="acc-trigger-2"
+                  hidden
+                >
+                  <div class="accordion__content">
+                    <p>Yes, email and chat support available.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM 3 -->
+              <div class="accordion__item">
+                <button
+                  class="accordion__trigger"
+                  aria-expanded="false"
+                  aria-controls="acc-panel-3"
+                  id="acc-trigger-3"
+                >
+                  What is your refund policy?
+                </button>
+
+                <div
+                  class="accordion__panel"
+                  id="acc-panel-3"
+                  role="region"
+                  aria-labelledby="acc-trigger-1"
+                  hidden
+                >
+                  <div class="accordion__content">
+                    <p>We provide refunds within 7 days.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM 4 -->
+              <div class="accordion__item">
+                <button
+                  class="accordion__trigger"
+                  aria-expanded="false"
+                  aria-controls="acc-panel-4"
+                  id="acc-trigger-4"
+                >
+                  What is your refund policy?
+                </button>
+
+                <div
+                  class="accordion__panel"
+                  id="acc-panel-4"
+                  role="region"
+                  aria-labelledby="acc-trigger-4"
+                  hidden
+                >
+                  <div class="accordion__content">
+                    <p>We provide refunds within 7 days.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM 5 -->
+              <div class="accordion__item">
+                <button
+                  class="accordion__trigger"
+                  aria-expanded="false"
+                  aria-controls="acc-panel-5"
+                  id="acc-trigger-5"
+                >
+                  What is your refund policy?
+                </button>
+
+                <div
+                  class="accordion__panel"
+                  id="acc-panel-5"
+                  role="region"
+                  aria-labelledby="acc-trigger-5"
+                  hidden
+                >
+                  <div class="accordion__content">
+                    <p>We provide refunds within 7 days.</p>
+                  </div>
+                </div>
+              </div>
+            </section>
           </div>
         </div>
       </section>
